[project]
name = "hntpy"
version = "0.0.3"
authors = [
  { name="Haley Morgan", email="haleymorgan3264@gmail.com" },
]
description = "Python wrapper for Helium API to simplify interaction with Helium blockchain"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/h-morgan/hntpy"
"Bug Tracker" = "https://github.com/h-morgan/hntpy/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"