[tool.poetry]
name = "hntpy"
version = "0.0.6"
description = "Python wrapper for Helium API to simplify interactions with the Helium blockchain."
authors = ["Haley Morgan <haleymorgan3264@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/h-morgan/hntpy"
documentation = "https://github.com/h-morgan/hntpy/tree/main/docs"
repository = "https://github.com/h-morgan/hntpy"
keywords = ["helium", "crypto", "hnt", "blockchain"]

[tool.poetry.scripts]
sandbox = 'hntpy.sandbox:sandbox'


[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
